# pyseq2501

./: .coveragerc  .eslintrc.cjs  .eslintrc.js  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .prettierrc  404.html  README.md  codecov.yml  conda-lock.yml  environment-dev.yml  environment-web.yml  environment.yml  index.html  mkdocs.yml  notes.md  objects.inv  package-lock.json  package.json  postcss.config.cjs  prettier.config.cjs  pyproject.toml  pyrightconfig.json  setup.cfg  setup.py  sitemap.xml  svelte.config.js  tailwind.config.cjs  tox.ini  tsconfig.json
.github/: ci_env.yml
.github/workflows/: build_svelte.yml  conda.yml  deploy-docs.yml  poetry.yml  python-package-conda.yml  python-poetry.yml  release.yml  test.yml
architecture/: index.html
archive/: test_thread_mgt.py  thread_mgt.py
archive/reverseengineerapi/: dcamfromlabview.md  functions.h  test.py
docs/: architecture.md  hiseq.md  index.md  mkdocs.yml  programs.md  reference.md
docs/javascripts/: mathjax.js
docs/overrides/partials/: header.html
docs/stylesheets/: extra.css
frontend/: package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tsconfig.json
frontend/src/: app.html  store.ts  structs.ts  svestore.ts
frontend/src/routes/: index.svelte
frontend/srcx/routes/: index.svelte
hiseq/: index.html
javascripts/: mathjax.js
legacy/: friendly_hiseq.py  init.py  main.py  old_main.py  prof.py
programs/: index.html
pyseq2/: __init__.py  config.py  experiment.py  fakes.py  flowcell.py  imager.py
pyseq2/base/: instruments.py  instruments_types.py
pyseq2/com/: async_com.py  fakeserial.py
pyseq2/experiment/: __init__.py  command.py  experiment.py  reagent.py
pyseq2/fakes/: fake_dcam.py  fake_handlers.py  fake_imagerfc.py  fake_serial.py
pyseq2/fluidics/: arm9chem.py  fluidics.py  paired_end_port.py  pump.py  valve.py
pyseq2/imaging/: laser.py  xstage.py  ystage.py
pyseq2/imaging/camera/: __init__.py  dcam.py  dcam_api.py  dcam_api.pyi  dcam_mode_key.py  dcam_props.py  dcam_types.py  fake_dcam.py  saved_props.pk  test_dcam.py
pyseq2/imaging/fpga/: __init__.py  led.py  optics.py  tdi.py  z_obj.py  z_tilt.py
pyseq2/server/: __main__.py  imaging.py
pyseq2/server/routers/: user.py
pyseq2/server/utils/: log.py  utils.py
pyseq2/utils/: coords.py  log.py  ports.py  utils.py
pyseq2server/: __init__.py  __main__.py  api_types.py  imaging.py  main.py  server.py  taker.py  test.py
pyseq2server/routers/: command.py  mancommand.py  status.py  user.py
pyseq2server/utils/: log.py
python/: classes.dot  cmd_uid.py  environment.yml  fake_imager.py  imaging.py  log.py  packages.dot  server.py  status.py  taker.py  temp.py  test.py
reference/: index.html
scratch/reverseengineerapi/: dcamfromlabview.md  find_func.py  test.pyi
scripts/: async_stress_test.py  get_ports.py  interactive_port.py  manual.py  reader.py  take_image.py  water.py
search/: search_index.json
src/: app.css  app.html  cmds.ts  com.py  coords.ts  dummy.py  eventloop.py  friendly_hiseq.py  global.d.ts  imager.py  instruments.py  main.py  reader.py  simulated.ts  stage.py  store.ts  test.py  tooltip.ts  ui.py  utils.py  utils.ts  ws_store.ts
src/api/: server.py  status.py
src/base/: instruments.py
src/com/: async_com.py  eventloop.py  test_thread_mgt.py  thread_mgt.py
src/components/: logo.svelte  modal.svelte  spinning.svelte
src/components/main/: autofocus.svelte  autofocusgraph.svelte  go.svelte  hist.svelte  main.svelte  preview.svelte  progress.svelte  veg.svelte  xy_input.svelte
src/components/navbar/: connected.svelte  nav.svelte  prism.css  spinning.svelte  status.svelte
src/components/sidebar/: coords.ts  division.svelte  fluidics.svelte  laser.svelte  lasers.svelte  map.svelte  mapp.svelte  sidebar.svelte  toggle.svelte
src/components/svgs/: arrow.svelte  pencil.svelte
src/imaging/: fpga.py  imager.py  instruments.py  laser.py  stage.py  xstage.py  ystage.py
src/imaging/camera/: __init__.py  api.h  dcam.py  dcam_api.py  dcam_api.pyi  dcam_mode_key.py  dcam_props.py  dcam_types.py  fake_dcam.py  fakedcam.py  test_dcam.py
src/instruments/: fpga.py  instruments.py  stage.py
src/routes/: __layout.svelte  index.svelte  main.svelte  main_auto.svelte  main_manual.svelte  nav.svelte  sidebar.svelte
src/stores/: command.ts  experiment.ts  experiment_schema.json  imaging.ts  reagent.ts  status.ts  store.ts  ws_store.ts
src/utils/: async_com.py  com.py  fakeserial.py  ports.py  test_utils.py  threadmanager.py  utils.py
tests/: conftest.py  test_asynccom.py  test_com.py  test_config.py  test_coords.py  test_dcam.py  test_experiment.py  test_experiment_compile.py  test_experiment_run.py  test_flowcells.py  test_imager.py  test_ports.py  test_poscalc.py  test_server.py  test_singleton.py  test_take_image.py  test_thread_mgt.py  test_utils.py
webcontrol/: .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  README.md  conda-lock.yml  environment.yml  package-lock.json  package.json  postcss.config.cjs  pyproject.toml
webcontrol/.github/: ci_env.yml
webcontrol/.github/workflows/: build_svelte.yml
webcontrol/pyseq2server/: __main__.py  api_types.py  server.py
webcontrol/pyseq2server/routers/: mancommand.py  status.py
webcontrol/src/: app.html  global.d.ts  tooltip.ts  utils.ts
webcontrol/src/components/: spinning.svelte
webcontrol/src/components/main/: autofocusgraph.svelte  go.svelte  hist.svelte  progress.svelte  xy_input.svelte
webcontrol/src/components/main/auto/reagents/: reagents.svelte
webcontrol/src/components/main/auto/steps/: step_cell.svelte
webcontrol/src/components/navbar/: status.svelte
webcontrol/src/components/sidebar/: fluidics.svelte  laser.svelte
webcontrol/src/components/sidebar/slide/: editable.svelte  locator.svelte  ruler_x.svelte  ruler_y.svelte  slide.svelte  tilt.svelte
webcontrol/src/components/svgs/: arrow.svelte
webcontrol/src/routes/: __layout.svelte  index.svelte
webcontrol/src/stores/: command.ts  imaging.ts  reagent.ts  status.ts
webcontrol/tests/: test_server.py
(+64 files in other folders)
