[tool.poetry]
authors = ["Chaichontat Sriworarat <34997334+chaichontat@users.noreply.github.com>"]
description = "Control your HiSeq 2000/2500 with ease."
license = "GPL"
name = "pyseq2501"
packages = [
  {include = "pyseq2"},
]
version = "0.1.0"

[tool.poetry.dependencies]
Pillow = "^9.0.1"
PyYAML = "^6.0"
imagecodecs = "^2022.2.22"
numpy = "^1.22.2"
pydantic = "^1.9.0"
pyserial = "^3.5"
pyserial-asyncio = "^0.6"
python = "^3.10"
rich = "^11.2.0"
tifffile = "^2022.2.9"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
hypothesis = "^6.39.1"
isort = "^5.10.1"
pre-commit = "^2.17.0"
pytest = "^7.0.1"
pytest-asyncio = "^0.18.2"
pytest-cov = "^3.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
include = 'pyseq2/'
line-length = 110
target-version = ['py310']

[tool.pyright]
include = ["pyseq2"]
pythonVersion = "3.10"
reportMissingTypeStubs = false
reportPrivateUsage = false
reportPropertyTypeMismatch = false
reportUnknownMemberType = false
reportUntypedBaseClass = false
reportUntypedFunctionDecorator = false
reportUnusedImport = false
reportUnusedVariable = "warning"
typeCheckingMode = "strict"

[tool.isort]
known_first_party = ["pyseq2"]
known_local_folder = ["pyseq2"]
line_length = 110
profile = "black"
py_version = 310
src_paths = ["pyseq2", "tests", "scripts"]

[tool.pytest.ini_options]
addopts = "--cov=pyseq2 --cov-report=html --cov-report=xml"
asyncio_mode = "auto"
log_cli = 1
# log_cli_level = "DEBUG"
env = ["FAKE_HISEQ = 1"]
minversion = "7.0"
testpaths = ["tests"]
