[tool.poetry]
authors = ["Chaichontat Sriworarat <34997334+chaichontat@users.noreply.github.com>"]
description = "Control your HiSeq 2000/2500 with ease."
include = ["webcontrol/build/**/*"]
license = "GPL"
name = "pyseq2501"
packages = [
  {include = "pyseq2"},
]
version = "0.1.0"

[tool.poetry.scripts]
pyseq2server = 'pyseq2.server.__main__:run'

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
include = 'pyseq2/'
line-length = 110
target-version = ['py310']

[tool.pyright]
include = ["pyseq2"]
pythonVersion = "3.10"
reportMissingTypeStubs = false
reportPrivateUsage = false
reportPropertyTypeMismatch = false
reportUnknownArgumentType = "warning"
reportUnknownMemberType = false
reportUnknownVariableType = "warning"
reportUntypedBaseClass = false
reportUntypedFunctionDecorator = false
reportUnusedImport = false
reportUnusedVariable = "warning"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true

[tool.isort]
known_first_party = ["pyseq2"]
known_local_folder = ["pyseq2"]
line_length = 110
profile = "black"
py_version = 310
src_paths = ["pyseq2", "tests", "scripts"]

[tool.pytest.ini_options]
addopts = "--cov=pyseq2 --cov-report=html --cov-report=xml"
asyncio_mode = "auto"
log_cli = 1
# log_cli_level = "DEBUG"
env = ["FAKE_HISEQ = 1"]
minversion = "7.0"
testpaths = ["tests"]

[tool.bandit]
skips = ["B101", "B601"]
