[metadata]
name = PySeq2501
version = 0.0.1
description = Control the HiSeq 2000/2500
url = https://github.com/chaichontat/pyseq2501
author = Chaichontat Sriworarat
license = GPL
classifiers=
development status :: 1 - Planning
intended audience :: Science/Research
programming language :: Python :: 3.10

[options]
include_package_data = True
packages = find:

[options.package_data]
* = *.pk

[options.packages.find]
include = pyseq2*
