[metadata]
name = pyseq2501server
version = 0.0.1
description = Web interface for PySeq2501
url = https://github.com/chaichontat/pyseq2501-web
author = Chaichontat Sriworarat
license = GPL
classifiers=
development status :: 1 - Planning
intended audience :: Science/Research
programming language :: Python :: 3.10

[options]
packages = find:

[options.packages.find]
include = pyseq2server*

[options.entry_points]
console_scripts =
    pyseq2server = pyseq2server.__main__:run
